前端 後台管理功能所有list頁面已連資料庫可顯示

--- a/src/main/resources/public/back_end-v6/partials/_sidebar.html
+++ b/src/main/resources/public/back_end-v6/partials/_sidebar.html
@@ -53,14 +53,14 @@
                 新增員工
               </a>
             </li>
-            <li class="nav-item">
-              <a
-                href="/back_end-v6/pages/employee/employee_per.html"
-                class="nav-link"
-              >
-                員工權限管理
-              </a>
-            </li>
+<!--             <li class="nav-item"> -->
+<!--               <a -->
+<!--                 href="/back_end-v6/pages/employee/employee_per.html" -->
+<!--                 class="nav-link" -->
+<!--               > -->
+<!--                 員工權限管理 -->
+<!--               </a> -->
+<!--             </li> -->
           </ul>
         </div>
       </li>
@@ -216,14 +216,14 @@
         <div class="collapse" id="news">
           <ul class="nav sub-menu">
             <li class="nav-item">
-              <a href="/back_end-v6/pages/news/news_list.html" class="nav-link">
+              <a href="/back_end-v6/pages/hotelnews/news_list.html" class="nav-link">
                 消息與活動總覽
               </a>
             </li>
           </ul>
           <ul class="nav sub-menu">
             <li class="nav-item">
-              <a href="/back_end-v6/pages/news/news_add.html" class="nav-link">
+              <a href="/back_end-v6/pages/hotelnews/news_add.html" class="nav-link">
                 新增消息與活動
               </a>
             </li>
