--- a/src/main/resources/public/layout/styles/layout.css
+++ b/src/main/resources/public/layout/styles/layout.css
@@ -455,3 +455,8 @@ table a, #comments a{background-color:inherit;}
 	.font-x2{font-size:1.6rem;}
 	.font-x3{font-size:1.8rem;}
 }
+
+@font-face {
+	font-family: fontSkin;
+	src: url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);
+  }
