--- a/src/main/resources/public/layout/styles/framework.css
+++ b/src/main/resources/public/layout/styles/framework.css
@@ -34,7 +34,7 @@ html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 .bgded{background-position:top center; background-repeat:no-repeat; background-size:cover;}
 .circle{border-radius:50%; background-clip:padding-box;}
 
-.btn, button.btn{display:inline-block; padding:8px 25px 10px; text-transform:uppercase; font-size:1rem; font-weight:400; border:1px solid;}
+.btn, button.btn button{display:inline-block; padding:8px 25px 10px; text-transform:uppercase; font-size:1rem; font-weight:400; border:1px solid;}
 button.btn{cursor:pointer;}
 
 .clear, .group{display:block;}
@@ -59,7 +59,7 @@ img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; l
 /* Fonts
 --------------------------------------------------------------------------------------------------------------- */
 body, input, textarea, select{font-family:Verdana, Geneva, sans-serif;}
-h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, serif;}
+h1, h2, h3, h4, h5, h6, .heading, li, p, button, span, div, td, tr {font-family:Georgia, "Times New Roman", Times, serif;}
 
 
 /* Forms
